cdk.out/assembly-CdkpipelineStack-test/CdkpipelineStacktestWordpressStack8B804646.template.json
{
 "Resources": {
  "MyVpcF9F0CA6F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/Resource"
   }
  },
  "MyVpcPublicSubnet1SubnetF6608456": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "AvailabilityZone": "eu-west-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1/Subnet"
   }
  },
  "MyVpcPublicSubnet1RouteTableC46AB2F4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1/RouteTable"
   }
  },
  "MyVpcPublicSubnet1RouteTableAssociation2ECEE1CB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnet1RouteTableC46AB2F4"
    },
    "SubnetId": {
     "Ref": "MyVpcPublicSubnet1SubnetF6608456"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcPublicSubnet1DefaultRoute95FDF9EB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnet1RouteTableC46AB2F4"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    }
   },
   "DependsOn": [
    "MyVpcVPCGW488ACE0D"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "MyVpcPublicSubnet1EIP096967CB": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1/EIP"
   }
  },
  "MyVpcPublicSubnet1NATGatewayAD3400C1": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MyVpcPublicSubnet1SubnetF6608456"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVpcPublicSubnet1EIP096967CB",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "MyVpcPublicSubnet1DefaultRoute95FDF9EB",
    "MyVpcPublicSubnet1RouteTableAssociation2ECEE1CB"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet1/NATGateway"
   }
  },
  "MyVpcPublicSubnet2Subnet492B6BFB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "AvailabilityZone": "eu-west-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2/Subnet"
   }
  },
  "MyVpcPublicSubnet2RouteTable1DF17386": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2/RouteTable"
   }
  },
  "MyVpcPublicSubnet2RouteTableAssociation227DE78D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnet2RouteTable1DF17386"
    },
    "SubnetId": {
     "Ref": "MyVpcPublicSubnet2Subnet492B6BFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcPublicSubnet2DefaultRoute052936F6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPublicSubnet2RouteTable1DF17386"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    }
   },
   "DependsOn": [
    "MyVpcVPCGW488ACE0D"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "MyVpcPublicSubnet2EIP8CCBA239": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2/EIP"
   }
  },
  "MyVpcPublicSubnet2NATGateway91BFBEC9": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MyVpcPublicSubnet2Subnet492B6BFB"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVpcPublicSubnet2EIP8CCBA239",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "MyVpcPublicSubnet2DefaultRoute052936F6",
    "MyVpcPublicSubnet2RouteTableAssociation227DE78D"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PublicSubnet2/NATGateway"
   }
  },
  "MyVpcPrivateSubnet1Subnet5057CF7E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "AvailabilityZone": "eu-west-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet1/Subnet"
   }
  },
  "MyVpcPrivateSubnet1RouteTable8819E6E2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet1/RouteTable"
   }
  },
  "MyVpcPrivateSubnet1RouteTableAssociation56D38C7E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnet1RouteTable8819E6E2"
    },
    "SubnetId": {
     "Ref": "MyVpcPrivateSubnet1Subnet5057CF7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "MyVpcPrivateSubnet1DefaultRouteA8CDE2FA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnet1RouteTable8819E6E2"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcPublicSubnet1NATGatewayAD3400C1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "MyVpcPrivateSubnet2Subnet0040C983": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "AvailabilityZone": "eu-west-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet2/Subnet"
   }
  },
  "MyVpcPrivateSubnet2RouteTableCEDCEECE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet2/RouteTable"
   }
  },
  "MyVpcPrivateSubnet2RouteTableAssociation86A610DA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnet2RouteTableCEDCEECE"
    },
    "SubnetId": {
     "Ref": "MyVpcPrivateSubnet2Subnet0040C983"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "MyVpcPrivateSubnet2DefaultRoute9CE96294": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVpcPrivateSubnet2RouteTableCEDCEECE"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVpcPublicSubnet2NATGateway91BFBEC9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "MyVpcIGW5C4A4F63": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/IGW"
   }
  },
  "MyVpcVPCGW488ACE0D": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    },
    "InternetGatewayId": {
     "Ref": "MyVpcIGW5C4A4F63"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyVpc/VPCGW"
   }
  },
  "MyBucketF68F3FF0": {
   "Type": "AWS::S3::Bucket",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyBucket/Resource"
   }
  },
  "MyDatabaseCredentialsCBA70E73": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": "Credentials for MyDatabase",
    "GenerateSecretString": {
     "ExcludePunctuation": true,
     "GenerateStringKey": "password",
     "IncludeSpace": false,
     "PasswordLength": 16,
     "SecretStringTemplate": "{\"username\": \"admin\"}"
    },
    "Name": "mydatabase-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyDatabaseCredentials/Resource"
   }
  },
  "MyDatabaseCredentialsAttachment65638C6C": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "MyDatabaseCredentialsCBA70E73"
    },
    "TargetId": {
     "Ref": "MyDatabase1E2517DB"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyDatabaseCredentials/Attachment/Resource"
   }
  },
  "MyRdsSecurityGroup97F9D73C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CdkpipelineStack/test/WordpressStack/MyRdsSecurityGroup",
    "GroupName": "my-rds-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:3306",
      "FromPort": 3306,
      "IpProtocol": "tcp",
      "ToPort": 3306
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyRdsSecurityGroup/Resource"
   }
  },
  "MyRdsSecurityGroupfromIndirectPeerIndirectPort0B1B0764": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "CidrIp": {
     "Fn::GetAtt": [
      "MyVpcF9F0CA6F",
      "CidrBlock"
     ]
    },
    "Description": {
     "Fn::Join": [
      "",
      [
       "from ",
       {
        "Fn::GetAtt": [
         "MyVpcF9F0CA6F",
         "CidrBlock"
        ]
       },
       ":{IndirectPort}"
      ]
     ]
    },
    "FromPort": {
     "Fn::GetAtt": [
      "MyDatabase1E2517DB",
      "Endpoint.Port"
     ]
    },
    "GroupId": {
     "Fn::GetAtt": [
      "MyRdsSecurityGroup97F9D73C",
      "GroupId"
     ]
    },
    "ToPort": {
     "Fn::GetAtt": [
      "MyDatabase1E2517DB",
      "Endpoint.Port"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyRdsSecurityGroup/from {IndirectPeer}:{IndirectPort}"
   }
  },
  "MyDatabaseSubnetGroup4D22B380": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for MyDatabase database",
    "SubnetIds": [
     {
      "Ref": "MyVpcPrivateSubnet1Subnet5057CF7E"
     },
     {
      "Ref": "MyVpcPrivateSubnet2Subnet0040C983"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyDatabase/SubnetGroup/Default"
   }
  },
  "MyDatabase1E2517DB": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "10",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "wordpressdb",
    "DBSubnetGroupName": {
     "Ref": "MyDatabaseSubnetGroup4D22B380"
    },
    "DeletionProtection": false,
    "Engine": "mysql",
    "EngineVersion": "8.0",
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "MyDatabaseCredentialsCBA70E73"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "MyDatabaseCredentialsCBA70E73"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MultiAZ": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "MyRdsSecurityGroup97F9D73C",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyDatabase/Resource"
   }
  },
  "MyEfsSecurityGroupFDC7B509": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CdkpipelineStack/test/WordpressStack/MyEfsSecurityGroup",
    "GroupName": "my-efs-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "MyVpcF9F0CA6F",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "MyVpcF9F0CA6F",
           "CidrBlock"
          ]
         },
         ":2049"
        ]
       ]
      },
      "FromPort": 2049,
      "IpProtocol": "tcp",
      "ToPort": 2049
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyEfsSecurityGroup/Resource"
   }
  },
  "MyEfsFileSystem570A3D32": {
   "Type": "AWS::EFS::FileSystem",
   "Properties": {
    "Encrypted": true,
    "FileSystemTags": [
     {
      "Key": "Name",
      "Value": "CdkpipelineStack/test/WordpressStack/MyEfsFileSystem"
     }
    ],
    "PerformanceMode": "generalPurpose",
    "ThroughputMode": "bursting"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyEfsFileSystem/Resource"
   }
  },
  "MyEfsFileSystemEfsMountTarget113745499": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "MyEfsFileSystem570A3D32"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "MyEfsSecurityGroupFDC7B509",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "MyVpcPrivateSubnet1Subnet5057CF7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyEfsFileSystem/EfsMountTarget1"
   }
  },
  "MyEfsFileSystemEfsMountTarget2E02D6819": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "MyEfsFileSystem570A3D32"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "MyEfsSecurityGroupFDC7B509",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "MyVpcPrivateSubnet2Subnet0040C983"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyEfsFileSystem/EfsMountTarget2"
   }
  },
  "MyFargateTaskRoleDDCC9FD0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyFargateTaskRole/Resource"
   }
  },
  "MyFargateTaskRoleDefaultPolicy7A2ACB48": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "rds-db:connect",
       "Condition": {
        "StringEquals": {
         "rds:DatabaseEngine": "mysql"
        }
       },
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:aws:rds:eu-west-1:707597687992:",
          {
           "Ref": "MyDatabase1E2517DB"
          }
         ]
        ]
       }
      },
      {
       "Action": [
        "s3:Abort*",
        "s3:DeleteObject*",
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*",
        "s3:PutObject",
        "s3:PutObjectLegalHold",
        "s3:PutObjectRetention",
        "s3:PutObjectTagging",
        "s3:PutObjectVersionTagging"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "MyBucketF68F3FF0",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "MyBucketF68F3FF0",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MyExecutionRoleC1544746",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MyFargateTaskRoleDefaultPolicy7A2ACB48",
    "Roles": [
     {
      "Ref": "MyFargateTaskRoleDDCC9FD0"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyFargateTaskRole/DefaultPolicy/Resource"
   }
  },
  "MyCluster4C1BA579": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyCluster/Resource"
   }
  },
  "MyTaskDefinitionF5B350B4": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "RDS_PORT",
        "Value": "3306"
       },
       {
        "Name": "RDS_HOST",
        "Value": {
         "Fn::GetAtt": [
          "MyDatabase1E2517DB",
          "Endpoint.Address"
         ]
        }
       },
       {
        "Name": "S3_BUCKET_NAME",
        "Value": {
         "Ref": "MyBucketF68F3FF0"
        }
       }
      ],
      "Essential": true,
      "Image": "wordpress",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "MyTaskDefinitionMyContainerLogGroupEA37043B"
        },
        "awslogs-stream-prefix": "mycontainer",
        "awslogs-region": "eu-west-1"
       }
      },
      "MountPoints": [
       {
        "ContainerPath": "/var/www/html/wp-content",
        "ReadOnly": false,
        "SourceVolume": "efs"
       },
       {
        "ContainerPath": "/var/www/html",
        "ReadOnly": false,
        "SourceVolume": "wordpress-data"
       }
      ],
      "Name": "MyContainer",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ],
      "Secrets": [
       {
        "Name": "RDS_USERNAME",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "MyDatabaseCredentialsCBA70E73"
           },
           ":password::"
          ]
         ]
        }
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "MyTaskDefinitionExecutionRole3D88C23D",
      "Arn"
     ]
    },
    "Family": "CdkpipelineStacktestWordpressStackMyTaskDefinition72B972A3",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "MyFargateTaskRoleDDCC9FD0",
      "Arn"
     ]
    },
    "Volumes": [
     {
      "EFSVolumeConfiguration": {
       "FilesystemId": {
        "Ref": "MyEfsFileSystem570A3D32"
       },
       "RootDirectory": "/",
       "TransitEncryption": "ENABLED",
       "TransitEncryptionPort": 3049
      },
      "Name": "efs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyTaskDefinition/Resource"
   }
  },
  "MyTaskDefinitionMyContainerLogGroupEA37043B": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 30
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyTaskDefinition/MyContainer/LogGroup/Resource"
   }
  },
  "MyTaskDefinitionExecutionRole3D88C23D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyTaskDefinition/ExecutionRole/Resource"
   }
  },
  "MyTaskDefinitionExecutionRoleDefaultPolicy17975C1F": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MyTaskDefinitionMyContainerLogGroupEA37043B",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "MyDatabaseCredentialsCBA70E73"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MyTaskDefinitionExecutionRoleDefaultPolicy17975C1F",
    "Roles": [
     {
      "Ref": "MyTaskDefinitionExecutionRole3D88C23D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyTaskDefinition/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "MyExecutionRoleC1544746": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonElasticFileSystemFullAccess"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyExecutionRole/Resource"
   }
  },
  "MyFargateSecurityGroup51EBDF1F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CdkpipelineStack/test/WordpressStack/MyFargateSecurityGroup",
    "GroupName": "my-fargate-sg",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow inbound traffic to Fargate service",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyFargateSecurityGroup/Resource"
   }
  },
  "MyFargateSecurityGrouptoCdkpipelineStacktestWordpressStackMyEfsSecurityGroup7CA5A1382049538DD3EE": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "MyFargateSecurityGroup51EBDF1F",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Allow outbound traffic from Fargate service to EFS",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "MyEfsSecurityGroupFDC7B509",
      "GroupId"
     ]
    },
    "FromPort": 2049,
    "ToPort": 2049
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyFargateSecurityGroup/to CdkpipelineStacktestWordpressStackMyEfsSecurityGroup7CA5A138:2049"
   }
  },
  "MyFargateSecurityGroupfromCdkpipelineStacktestWordpressStackMyLoadBalancerSecurityGroup06BAA16A8023F64023": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "MyFargateSecurityGroup51EBDF1F",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MyLoadBalancerSecurityGroupF2C3214F",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyFargateSecurityGroup/from CdkpipelineStacktestWordpressStackMyLoadBalancerSecurityGroup06BAA16A:80"
   }
  },
  "MyServiceB4132EDA": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MyCluster4C1BA579"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "MyContainer",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "MyLoadBalancerMyListenerMyTargetGroup441C4CAB"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "MyFargateSecurityGroup51EBDF1F",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MyVpcPublicSubnet1SubnetF6608456"
       },
       {
        "Ref": "MyVpcPublicSubnet2Subnet492B6BFB"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "MyTaskDefinitionF5B350B4"
    }
   },
   "DependsOn": [
    "MyLoadBalancerMyListenerMyTargetGroup441C4CAB",
    "MyLoadBalancerMyListener935D2B9B"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyService/Service"
   }
  },
  "MyLoadBalancer0B45E83C": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "MyLoadBalancerSecurityGroupF2C3214F",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "MyVpcPublicSubnet1SubnetF6608456"
     },
     {
      "Ref": "MyVpcPublicSubnet2Subnet492B6BFB"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "MyVpcPublicSubnet1DefaultRoute95FDF9EB",
    "MyVpcPublicSubnet1RouteTableAssociation2ECEE1CB",
    "MyVpcPublicSubnet2DefaultRoute052936F6",
    "MyVpcPublicSubnet2RouteTableAssociation227DE78D"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyLoadBalancer/Resource"
   }
  },
  "MyLoadBalancerSecurityGroupF2C3214F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB CdkpipelineStacktestWordpressStackMyLoadBalancer64A17A28",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyLoadBalancer/SecurityGroup/Resource"
   }
  },
  "MyLoadBalancerSecurityGrouptoCdkpipelineStacktestWordpressStackMyFargateSecurityGroup09FF42DF8066CB84B8": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "MyLoadBalancerSecurityGroupF2C3214F",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "MyFargateSecurityGroup51EBDF1F",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyLoadBalancer/SecurityGroup/to CdkpipelineStacktestWordpressStackMyFargateSecurityGroup09FF42DF:80"
   }
  },
  "MyLoadBalancerMyListener935D2B9B": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "MyLoadBalancerMyListenerMyTargetGroup441C4CAB"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "MyLoadBalancer0B45E83C"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyLoadBalancer/MyListener/Resource"
   }
  },
  "MyLoadBalancerMyListenerMyTargetGroup441C4CAB": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyLoadBalancer/MyListener/MyTargetGroup/Resource"
   }
  },
  "MyTargetGroupE0E0D6B9": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "VpcId": {
     "Ref": "MyVpcF9F0CA6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/MyTargetGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31SXU/rMAz9LbxnuXyIq/u6D0CTAFUr4hW5mVfC0mRKnKGp6n+/btN2BSSefHzsnh7buZZ/b+XlBXyGmdruZ0YXss4J1F4w9Vajupb160GJ5c6+ZkuRxcJolcfCIrXcGW1cJHyBwuCZP3PzEJzSQNrZsbkFd+usDc9AD0D4CSeReX1keBZeW0LPeGhITvpsTuz1vUJLIkcVvabTg3fx0Hn4lVjb0mMIP/i7jm5EuJH1Iqp9MpEQs6g8UqjAQomeV9XlvUiLUngBXyJNzI0N3yuN8Nsg6xUQFBBwbQOBVSjS/KP11eIHMbQ2AnescK8N5qdAWLXlr9mTi7b/cyM0VLLeuHSnLmaOb9otNiFWVKy4NJEFfMsP8J41oD1p2K9wp60eDvqdcZZAW/QTrv82R3/UKj2SBBthXMn/e3TlON6A2YqBQFoZB9sCDA+sbXnkRzk/HNhr9 [...]
   },
   "Metadata": {
    "aws:cdk:path": "CdkpipelineStack/test/WordpressStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
